build_log_final_2.txt
> Task :clean

> Task :compileJava FAILED
C:\Users\SSAFY\Desktop\bokducke\src\main\java\ssafy\bokduck\service\LlmService.java:26: error: cannot find symbol
    private final ChatMemory chatMemory;
                  ^
  symbol:   class ChatMemory
  location: class LlmService
C:\Users\SSAFY\Desktop\bokducke\src\main\java\ssafy\bokduck\service\LlmService.java:35: error: cannot find symbol
            PropertySearchContext searchContext, ChatMemory chatMemory) {
                                                 ^
  symbol:   class ChatMemory
  location: class LlmService
C:\Users\SSAFY\Desktop\bokducke\src\main\java\ssafy\bokduck\service\LlmService.java:75: error: cannot find symbol
            String content = msg.getContent().replace("\n", "\\n").replace("\"", "\\\"");
                                ^
  symbol:   method getContent()
  location: variable msg of type Message
Note: C:\Users\SSAFY\Desktop\bokducke\src\main\java\ssafy\bokduck\service\LlmService.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
3 errors

[Incubating] Problems report is available at: file:///C:/Users/SSAFY/Desktop/bokducke/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler output below.
  Note: C:\Users\SSAFY\Desktop\bokducke\src\main\java\ssafy\bokduck\service\LlmService.java uses unchecked or unsafe operations.
  C:\Users\SSAFY\Desktop\bokducke\src\main\java\ssafy\bokduck\service\LlmService.java:26: error: cannot find symbol
      private final ChatMemory chatMemory;
                    ^
    symbol:   class ChatMemory
    location: class LlmService
  C:\Users\SSAFY\Desktop\bokducke\src\main\java\ssafy\bokduck\service\LlmService.java:35: error: cannot find symbol
              PropertySearchContext searchContext, ChatMemory chatMemory) {
                                                   ^
    symbol:   class ChatMemory
    location: class LlmService
  Note: Recompile with -Xlint:unchecked for details.
  C:\Users\SSAFY\Desktop\bokducke\src\main\java\ssafy\bokduck\service\LlmService.java:75: error: cannot find symbol
              String content = msg.getContent().replace("\n", "\\n").replace("\"", "\\\"");
                                  ^
    symbol:   method getContent()
    location: variable msg of type Message
  3 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to generate a Build Scan (powered by Develocity).

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.2.1/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 6s
2 actionable tasks: 2 executed
